<resources>
    <string name="app_name">alliance</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_passwork">忘记密码</string>
    <string name="prompt_user">请输入你的手机号码</string>
    <string name="rg_username">用户昵称</string>
    <string name="rg_code">发送验证码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">请输入你的密码</string>
    <string name="login_tv">LOGIN</string>

    <string name="no_friend">暂无好友</string>
    <string name="search">搜索</string>
    <string name="delete_friend">删除该好友</string>
    <string name="send_message">发送信息</string>
    <string name="str_add_group">创建群</string>


    <string name="group_my_name">群名称</string>
    <string name="no_group">您暂时没有加入任何群</string>

    <string name="all_group_member">更多群员</string>
    <string name="search_message">查看聊天记录</string>
    <string name="group_portrait">群头像</string>
    <string name="group_name">群聊名称</string>
    <string name="group_nickname">群昵称</string>
    <string name="group_activity">群活动</string>
    <string name="group_announcement">群公告</string>
    <string name="group_apply">进群申请</string>
    <string name="group_number">群号码</string>
    <string name="message_notice">消息免打扰</string>
    <string name="set_top">会话置顶</string>
    <string name="clean_message">清除聊天记录</string>
    <string name="quit_group">删除并退出</string>
    <string name="dismiss_group">解散并退出</string>

    <!-- 录音 -->
    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <string name="toolong">录音时间过长</string>
</resources>
