<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
   <ImageView
       android:id="@+id/iv_login_icon"
       android:layout_marginTop="75dp"
       android:layout_centerHorizontal="true"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@mipmap/tubiao"/>
        <LinearLayout
            android:layout_below="@id/iv_login_icon"
            android:layout_marginTop="33dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <EditText
                    android:paddingLeft="10dp"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@mipmap/phone"
                    android:id="@+id/et_login_phone"
                    android:background="@drawable/edit_bg"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/prompt_user"
                    android:text="15622226782"
                    android:inputType="textPhonetic"
                    android:maxLines="1"/>

                <EditText
                    android:background="@drawable/edit_bg"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@mipmap/passwork"
                    android:id="@+id/et_login_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/prompt_password"
                    android:text="123456abc"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

            <Button
                android:textColor="@color/col_444343"
                android:background="@color/col_10DB9F"
                android:id="@+id/btn_login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/login"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_normal_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/col_999999"
                    android:textSize="16sp"
                    android:text="普通用户注册"/>
                <TextView
                    android:layout_marginLeft="50dp"
                    android:id="@+id/tv_vip_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/col_999999"
                    android:textSize="16sp"
                    android:text="邀请码注册"/>
            </LinearLayout>
        </LinearLayout>

</RelativeLayout>
