<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contact_default_bk"
    android:orientation="vertical">

    <include layout="@layout/layout_title_top" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/border_10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.ike.sq.alliance.ui.widget.DemoGridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="start"
                android:listSelector="@android:color/transparent"
                android:numColumns="6"
                android:paddingLeft="1dp"
                android:paddingRight="1dp" />

            <TextView
                android:id="@+id/tv_group_member_size"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14dp"
                android:gravity="center"
                android:text="@string/all_group_member"
                android:textColor="@color/color_33"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.25dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="20dp"
                android:background="#dfdfdd" />
            <!--群名称-->
            <LinearLayout
                android:id="@+id/ll_group_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/btn_list_item_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/group_name"
                    android:textColor="@color/color_33"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_group_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="14dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:maxLines="1"
                    android:textColor="#999"
                    android:textSize="14sp" />
            </LinearLayout>
            <!--群公告-->
            <LinearLayout
                android:id="@+id/ll_group_announcement"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/btn_list_item_bg"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/group_announcement"
                    android:textColor="@color/color_33"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_group_setvicePrincipal"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/btn_list_item_bg"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="设置副群主"
                    android:textColor="@color/color_33"
                    android:textSize="16sp" />
            </LinearLayout>
            <!--群号码-->
            <LinearLayout
                android:id="@+id/ll_group_number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/btn_list_item_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/group_number"
                    android:textColor="@color/color_33"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_group_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="14dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:maxLines="1"
                    android:textColor="#999"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.25dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="20dp"
                android:background="#dfdfdd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/message_notice"
                    android:textColor="@color/color_33"
                    android:textSize="16sp" />

                <com.ike.sq.alliance.ui.widget.SwitchButton
                    android:id="@+id/sw_group_notfaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:kswAnimationDuration="300"
                    app:kswBackDrawable="@drawable/ios_back_drawable"
                    app:kswBackMeasureRatio="1.4"
                    app:kswThumbDrawable="@mipmap/ios_thumb"
                    app:kswThumbMarginBottom="-8dp"
                    app:kswThumbMarginLeft="-5dp"
                    app:kswThumbMarginRight="-5dp"
                    app:kswThumbMarginTop="-2.5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:background="#dfdfdd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#ffffff"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/set_top"
                    android:textColor="@color/color_33"
                    android:textSize="16sp" />

                <com.ike.sq.alliance.ui.widget.SwitchButton
                    android:id="@+id/sw_group_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:kswAnimationDuration="300"
                    app:kswBackDrawable="@drawable/ios_back_drawable"
                    app:kswBackMeasureRatio="1.4"
                    app:kswThumbDrawable="@mipmap/ios_thumb"
                    app:kswThumbMarginBottom="-8dp"
                    app:kswThumbMarginLeft="-5dp"
                    app:kswThumbMarginRight="-5dp"
                    app:kswThumbMarginTop="-2.5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.25dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:background="#dfdfdd" />
            </LinearLayout>
            <!--群公告-->
            <LinearLayout
                android:id="@+id/ll_group_apply"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/btn_list_item_bg"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/group_apply"
                    android:textColor="@color/color_33"
                    android:textSize="16sp" />
            </LinearLayout>
            <!--个人昵称-->
            <LinearLayout
                android:id="@+id/ll_my_nickname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/btn_list_item_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/group_nickname"
                    android:textColor="@color/color_33"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_my_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="14dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:maxLines="1"
                    android:textColor="#999"
                    android:textSize="14sp" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_group_quit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rs_select_btn_red"
                android:text="@string/quit_group"
                android:textColor="#FFF"
                android:textSize="16sp" />
            <!--
                        <Button
                            android:id="@+id/btn_group_dismiss"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginLeft="14dp"
                            android:layout_marginRight="14dp"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/rs_select_btn_red"
                            android:text="@string/dismiss_group"
                            android:textColor="#FFF"
                            android:textSize="16sp"
                            android:visibility="gone" />-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>